--- a/index.html
+++ b/index.html
@@ -3,14 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meeting Time</title>
+    <title>MeetingTime.ls</title>
+
+    <!-- Metatag -->
+    <meta name="title" content="MeetingTime.ls" />
+    <meta
+      name="description"
+      content="MeetingTime.ls - the tool built specifically for consultants, coaches, therapists, mentors,
+          lawyers, doctors, and more who bill by the hour."
+    />
+    <link
+      rel="shortcut icon"
+      href="assets/images/icon.svg"
+      type="image/svg+xml"
+    />
+    <!-- Bootstrap CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
 
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div class="main">
       <!-- ------------------- Top Navbar -------------------- -->
+      <div class="top_nav">
+        <div class="container">
+          <div class="top_nav-content flex-between">
+            <div class="top_nav_left flex">
+              <i class="fa-solid fa-location-dot"></i>
+              <h6>121 King St, Melbourne, Victoria 3000</h6>
+            </div>
 
+            <div class="top_nav_right">
+              <div class="telephone flex">
+                <i class="fa-solid fa-phone"></i>
+                <h6>+61-2 3456 7890</h6>
+              </div>
+
+              <div class="email flex">
+                <i class="fa-solid fa-envelope"></i>
+                <h6>yourmail@email.com</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- ------------------- Main Navbar -------------------- -->
 
       <!-- ------------------- Hero Section -------------------- -->
@@ -41,6 +85,9 @@
 
       <!-- ------------------- Copyright -------------------- -->
     </div>
+
+    <!-- Swiper JS -->
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <script src="assets/js/main.js"></script>
   </body>
