--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <i class="fa-solid fa-bars"></i>
             </button>
 
-            <a href="contact.html" class="btn">Get Started </a>
+            <a href="contact.html" class="start-btn">Get Started </a>
 
             <div class="overlay" data-nav-toggler data-overlay></div>
           </div>
@@ -132,6 +132,37 @@
       </header>
 
       <!-- ------------------- Hero Section -------------------- -->
+
+      <srction class="home" id="home">
+        <div class="container">
+          <div class="home_content">
+            <div class="home_title">
+              <h1>
+                <span class="text-gardinets">The Pro's Secret Weapon:</span>
+                Effortless Scheduling, Automatic Payments
+              </h1>
+            </div>
+
+            <div class="home_article">
+              <p>
+                Are you tired of awkward money conversations and scheduling
+                nightmares? MeetingTime.ls simplifies how you manage and
+                monetize your expertise.
+              </p>
+            </div>
+
+            <div class="home_btn">
+              <a href="" class="btn">
+                <span>Join The Waitlist Now</span> <i class="fa-solid fa-arrow-right"></i>
+              </a>
+            </div>
+
+            <div class="home_update_note">
+              <p>Be the First to Know When MeetingTime.ls Launches!</p>
+            </div>
+          </div>
+        </div>
+      </srction>
 
       <!-- ------------------- Date Section -------------------- -->
 
