--- a/index.html
+++ b/index.html
@@ -166,7 +166,40 @@
 
       <!-- ------------------- Date Section -------------------- -->
 
+      <section class="date">
+        <div class="container">
+          <div class="date_content">
+            <div class="date_top flex-between">
+              <div class="date_top-content flex">
+                <img src="assets/images/checkmark.png" alt="">
+                <h4>AUTOMATIC PAYMENTS</h4>
+              </div>
+
+              <div class="date_top-content flex">
+                <img src="assets/images/checkmark.png" alt="">
+                <h4>FOCUS ON MEETINGS</h4>
+              </div>
+
+              <div class="date_top-content flex">
+                <img src="assets/images/checkmark.png" alt="">
+                <h4>GET PAID FOR EVERY MINUTE</h4>
+              </div>
+            </div>
+
+            <div class="date_bottom">
+              <img src="assets/images/date-img.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- ------------------- About Us Section -------------------- -->
+
+      <section class="about">
+        <div class="container">
+
+        </div>
+      </section>
 
       <!-- ------------------- Blog Section -------------------- -->
 
