--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 
             <div class="home_btn">
               <a href="" class="btn">
-                <span>Join The Waitlist Now</span> <i class="fa-solid fa-arrow-right"></i>
+                <span>Join The Waitlist Now</span>
+                <i class="fa-solid fa-arrow-right"></i>
               </a>
             </div>
 
@@ -171,23 +172,23 @@
           <div class="date_content">
             <div class="date_top flex-between">
               <div class="date_top-content flex">
-                <img src="assets/images/checkmark.png" alt="">
+                <img src="assets/images/checkmark.png" alt="" />
                 <h4>AUTOMATIC PAYMENTS</h4>
               </div>
 
               <div class="date_top-content flex">
-                <img src="assets/images/checkmark.png" alt="">
+                <img src="assets/images/checkmark.png" alt="" />
                 <h4>FOCUS ON MEETINGS</h4>
               </div>
 
               <div class="date_top-content flex">
-                <img src="assets/images/checkmark.png" alt="">
+                <img src="assets/images/checkmark.png" alt="" />
                 <h4>GET PAID FOR EVERY MINUTE</h4>
               </div>
             </div>
 
             <div class="date_bottom">
-              <img src="assets/images/date-img.png" alt="">
+              <img src="assets/images/date-img.png" alt="" />
             </div>
           </div>
         </div>
@@ -196,8 +197,69 @@
       <!-- ------------------- About Us Section -------------------- -->
 
       <section class="about">
+        <div class="shape">
+          <img src="assets/images/about-shape-1.png" alt="" class="shape_one" />
+          <img src="assets/images/about-shape-2.png" alt="" class="shape_two" />
+        </div>
         <div class="container">
+          <div class="about_content">
+            <div class="about_headings">
+              <p class="about_title">About Us</p>
 
+              <h2 class="about_subtitle">
+                Is Your Business Suffering From "Scheduling Nightmares"?
+              </h2>
+
+              <p class="about_article">
+                But behind the scenes, it's a constant battle with scheduling
+                systems and payment processes that just don't cut it.
+              </p>
+            </div>
+
+            <div class="about_details">
+              <div class="about_details-box">
+                <p>
+                  Clients book one meeting at a time, requiring time-consuming
+                  schedule management and payment follow-ups.
+                </p>
+              </div>
+
+              <div class="about_details-box">
+                <p>
+                  Or maybe clients send money outside your scheduling system,
+                  and now you're manually tracking funds and meeting times.
+                </p>
+              </div>
+
+              <div class="about_details-box">
+                <p>
+                  And these challenges aren't just extra work for you... they're
+                  costing you money.
+                </p>
+              </div>
+
+              <div class="about_details-box">
+                <p>
+                  Why? Because meetings run over, and you can't accurately track
+                  the time spent with each client.
+                </p>
+              </div>
+
+              <div class="about_details-box">
+                <p>
+                  The truth is that current scheduling systems simply weren't
+                  designed with your unique needs in mind.
+                </p>
+              </div>
+
+              <div class="about_details-box">
+                <p>
+                  A way to streamline scheduling, automate payments, and focus
+                  on what you do best — serving your clients.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
