--- a/index.html
+++ b/index.html
@@ -265,9 +265,100 @@
 
       <!-- ------------------- Blog Section -------------------- -->
 
+      <section class="blog">
+        <div class="container">
+          <div class="container">
+            <div class="blog_content">
+              <div class="blog_headings">
+                <p class="blog_title">Why Choose Us</p>
+
+                <h2 class="blog_subtitle">
+                  <span class="text-gardinets"
+                    >Own Your Time, Earn More Money.</span
+                  >
+                  It's That Simple.
+                </h2>
+
+                <p class="blog_article">
+                  Introducing MeetingTime.ls - the tool built specifically for
+                  consultants, coaches, therapists, mentors, lawyers, doctors,
+                  and more who bill by the hour.
+                </p>
+              </div>
+
+
+              <div class="blog_container">
+                <div class="blog_box">
+                  <img src="assets/images/blog-1.png" alt="">
+
+                  <h3>
+                    Never Miss a Paid Minute
+                  </h3>
+
+                  <p>
+                    Clients prepay, and every billable moment (virtual, in-person, or phone) is automatically tracked to
+                    ensure you are compensated.
+                  </p>
+                </div>
+
+                <div class="blog_box">
+                  <img src="assets/images/blog-2.png" alt="">
+
+                  <h3>
+                    Client-Focused Payments
+                  </h3>
+
+                  <p>
+                    Clients manage their own balances, see their remaining time, and schedule with confidence — no more awkward payment conversations.
+                  </p>
+                </div>
+
+                <div class="blog_box">
+                  <img src="assets/images/blog-3.png" alt="">
+
+                  <h3>
+                    Self-Scheduling = More Time for You
+                  </h3>
+
+                  <p>
+                    Set your availability, integrate calendars, and let clients book directly. Reclaim your time and focus on what you do best.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- ------------------- Wishlist Section -------------------- -->
 
+      <section class="wishlist">
+        <div class="container">
+          <div class="wishlist_container">
+            <div class="wishlist_title">
+              <h3>MeetingTime.ls transforms the way you schedule, get paid, and serve your clients. It's your key to a
+                smoother, more profitable business.</h3>
+            </div>
+
+            <div class="wishlist_btn">
+              <a href="" class="btn">
+                <span>Join The Waitlist Now</span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- ------------------- client cycle Section -------------------- -->
+
+      <section class="client_cycle">
+        <div class="container">
+          <div class="cycle_content">
+            
+          </div>
+        </div>
+      </section>
 
       <!-- ------------------- Review Section -------------------- -->
 
