--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       <section class="client_cycle">
         <div class="container">
           <div class="cycle_content">
-            
+
           </div>
         </div>
       </section>
@@ -371,6 +371,22 @@
       <!-- ------------------- Question Section -------------------- -->
 
       <!-- ------------------- Wishlist Section -------------------- -->
+      <section class="wishlist">
+        <div class="container">
+          <div class="wishlist_content">
+            <div class="wishlist_title">
+              <h3 class="text-gardinets">Join the waitlist today and be the first to hear about and experience the MeetingTime.ls.</h3>
+            </div>
+
+            <div class="white_btn">
+              <a href="" class="btn">
+                <span>Join The Waitlist Now</span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- ------------------- Footer -------------------- -->
 
