--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     />
 
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
   </head>
   <body>
     <div class="main">
@@ -286,42 +287,40 @@
                 </p>
               </div>
 
-
               <div class="blog_container">
                 <div class="blog_box">
-                  <img src="assets/images/blog-1.png" alt="">
+                  <img src="assets/images/blog-1.png" alt="" />
 
-                  <h3>
-                    Never Miss a Paid Minute
-                  </h3>
+                  <h3>Never Miss a Paid Minute</h3>
 
                   <p>
-                    Clients prepay, and every billable moment (virtual, in-person, or phone) is automatically tracked to
-                    ensure you are compensated.
+                    Clients prepay, and every billable moment (virtual,
+                    in-person, or phone) is automatically tracked to ensure you
+                    are compensated.
                   </p>
                 </div>
 
                 <div class="blog_box">
-                  <img src="assets/images/blog-2.png" alt="">
+                  <img src="assets/images/blog-2.png" alt="" />
 
-                  <h3>
-                    Client-Focused Payments
-                  </h3>
+                  <h3>Client-Focused Payments</h3>
 
                   <p>
-                    Clients manage their own balances, see their remaining time, and schedule with confidence — no more awkward payment conversations.
+                    Clients manage their own balances, see their remaining time,
+                    and schedule with confidence — no more awkward payment
+                    conversations.
                   </p>
                 </div>
 
                 <div class="blog_box">
-                  <img src="assets/images/blog-3.png" alt="">
+                  <img src="assets/images/blog-3.png" alt="" />
 
-                  <h3>
-                    Self-Scheduling = More Time for You
-                  </h3>
+                  <h3>Self-Scheduling = More Time for You</h3>
 
                   <p>
-                    Set your availability, integrate calendars, and let clients book directly. Reclaim your time and focus on what you do best.
+                    Set your availability, integrate calendars, and let clients
+                    book directly. Reclaim your time and focus on what you do
+                    best.
                   </p>
                 </div>
               </div>
@@ -336,8 +335,11 @@
         <div class="container">
           <div class="wishlist_container">
             <div class="wishlist_title">
-              <h3>MeetingTime.ls transforms the way you schedule, get paid, and serve your clients. It's your key to a
-                smoother, more profitable business.</h3>
+              <h3>
+                MeetingTime.ls transforms the way you schedule, get paid, and
+                serve your clients. It's your key to a smoother, more profitable
+                business.
+              </h3>
             </div>
 
             <div class="wishlist_btn">
@@ -355,12 +357,226 @@
       <section class="client_cycle">
         <div class="container">
           <div class="cycle_content">
-
+            <h1>Client Cycle</h1>
           </div>
         </div>
       </section>
 
       <!-- ------------------- Review Section -------------------- -->
+
+      <section class="review">
+        <div class="container">
+          <div class="review_content">
+            <div class="review_headings">
+              <p class="review_title">Testimonial</p>
+
+              <h2 class="review_subtitle">What Our Client Say About Us</h2>
+            </div>
+
+            <div class="client_feedback">
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feedback_container">
+                <div class="quotes">
+                  <img src="assets/images/quotes.png" alt="" />
+                </div>
+
+                <div class="feedback">
+                  <p>
+                    Creative geniuses who listen, understand, and craft
+                    captivating visuals - an agency that truly understands our
+                    needs.
+                  </p>
+                </div>
+
+                <div class="client_details">
+                  <div class="client_img">
+                    <img src="assets/images/client-1.png" alt="" />
+                  </div>
+
+                  <div class="client_name_position">
+                    <h5 class="name">Gabrielle Williams</h5>
+                    <p class="position">CEO & Founder of ABC</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- ------------------- Benefits Section -------------------- -->
 
@@ -371,11 +587,14 @@
       <!-- ------------------- Question Section -------------------- -->
 
       <!-- ------------------- Wishlist Section -------------------- -->
-      <section class="wishlist">
+      <section class="wishlist" style="display: none">
         <div class="container">
           <div class="wishlist_content">
             <div class="wishlist_title">
-              <h3 class="text-gardinets">Join the waitlist today and be the first to hear about and experience the MeetingTime.ls.</h3>
+              <h3 class="text-gardinets">
+                Join the waitlist today and be the first to hear about and
+                experience the MeetingTime.ls.
+              </h3>
             </div>
 
             <div class="white_btn">
