--- a/index.html
+++ b/index.html
@@ -580,6 +580,85 @@
 
       <!-- ------------------- Benefits Section -------------------- -->
 
+      <section class="benefits">
+        <div class="container">
+          <div class="benefits_content">
+            <div class="benefits_headings">
+              <div class="left_headings">
+                <p>Benefits</p>
+                <h2>Reclaim Your Time & Boost Your Bottom Line</h2>
+              </div>
+
+              <div class="right_article">
+                <p>
+                  With MeetingTime.ls, you can finally ditch the payment hassles
+                  and time-consuming scheduling that eat into your day.
+                </p>
+              </div>
+            </div>
+
+            <div class="benefit_container">
+              <div class="benefit_box">
+                <div class="benefit_img">
+                  <img src="assets/images/benefit-1.png" alt="" />
+                </div>
+
+                <h3>Seamless Booking Experience</h3>
+
+                <p>
+                  MeetingTime.ls checks your client's balance and offers them
+                  the option to add more money or book a shorter session.
+                </p>
+              </div>
+
+              <div class="benefit_box">
+                <div class="benefit_img">
+                  <img src="assets/images/benefit-2.png" alt="" />
+                </div>
+
+                <h3>Flexible Scheduling</h3>
+
+                <p>
+                  Clients easily book meetings based on their prepaid balance,
+                  maximizing your billable hours and preventing "surprise"
+                  sessions.
+                </p>
+              </div>
+
+              <div class="benefit_box">
+                <div class="benefit_img">
+                  <img src="assets/images/benefit-three.png" alt="" />
+                </div>
+
+                <h3>Focus On What You Do Best</h3>
+
+                <p>
+                  By eliminating the administrative burdens, Meeting Time.ls
+                  allows you to focus on providing an excellent service.
+                </p>
+              </div>
+            </div>
+
+            <div class="wishlist_container">
+              <div class="wishlist_title">
+                <h3>
+                  MeetingTime.Is puts you back in the driver's seat,
+                  transforming scheduling and payments into a seamless process
+                  that supports the growth of your business.
+                </h3>
+              </div>
+
+              <div class="wishlist_btn">
+                <a href="" class="btn">
+                  <span>Join The Waitlist Now</span>
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- ------------------- Wishlist Section -------------------- -->
 
       <!-- ------------------- Problem & Solution Section -------------------- -->
