--- a/index.html
+++ b/index.html
@@ -639,6 +639,7 @@
               </div>
             </div>
 
+            <!-- ------------------- Wishlist -------------------- -->
             <div class="wishlist_container">
               <div class="wishlist_title">
                 <h3>
@@ -659,9 +660,67 @@
         </div>
       </section>
 
-      <!-- ------------------- Wishlist Section -------------------- -->
-
       <!-- ------------------- Problem & Solution Section -------------------- -->
+
+      <section class="ps">
+        <div class="container">
+          <div class="ps_content">
+            <div class="ps_headings">
+              <p class="ps_title">Problem & Solutions</p>
+
+              <h2 class="ps_subtitle">
+                Invest in Your Business,
+                <span class="text-gardinets"> Invest in Yourself</span>
+              </h2>
+            </div>
+
+            <div class="ps_container">
+              <div class="left-box">
+                <h3>Imagine a workday where...</h3>
+
+                <ul>
+                  <li><p>Money conversations are a thing of the past.</p></li>
+                  <li>
+                    <p>
+                      Your calendar fills with ease, not endless back-and-forth.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      You can truly immerse yourself in serving your clients,
+                      knowing the business side is running smoothly.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="right_box">
+                <div class="right_box_content">
+                  <img src="assets/images/ps-arrow.png" alt="" />
+                  <p>
+                    These are the core pillars of any successful coaching,
+                    consulting, and profession that bills by the hour.
+                  </p>
+                </div>
+
+                <div class="right_box_content">
+                  <img src="assets/images/ps-arrow.png" alt="" />
+                  <p>
+                    It's time to give yourself the gift of time, peace of mind, and increased earnings.
+                  </p>
+                </div>
+
+                <div class="right_box_content">
+                  <img src="assets/images/ps-arrow.png" alt="" />
+                  <p>
+                    Let MeetingTime.ls take care of the scheduling and make sure you get paid.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- ------------------- Question Section -------------------- -->
 
