--- a/index.html
+++ b/index.html
@@ -706,14 +706,16 @@
                 <div class="right_box_content">
                   <img src="assets/images/ps-arrow.png" alt="" />
                   <p>
-                    It's time to give yourself the gift of time, peace of mind, and increased earnings.
+                    It's time to give yourself the gift of time, peace of mind,
+                    and increased earnings.
                   </p>
                 </div>
 
                 <div class="right_box_content">
                   <img src="assets/images/ps-arrow.png" alt="" />
                   <p>
-                    Let MeetingTime.ls take care of the scheduling and make sure you get paid.
+                    Let MeetingTime.ls take care of the scheduling and make sure
+                    you get paid.
                   </p>
                 </div>
               </div>
@@ -723,6 +725,165 @@
       </section>
 
       <!-- ------------------- Question Section -------------------- -->
+
+      <section class="accordion_section">
+        <div class="container">
+          <div class="accordion_container">
+            <div class="accordion_headings">
+              <p class="accordion_title">Frequently Asked Question</p>
+
+              <h2 class="accordion_subtitle">
+                Innovate, Develop, Launch: Your Product Journey FAQs
+              </h2>
+
+              <p class="accordion_article">
+                Answers to Common Questions About Our Product Development and
+                Launch Services
+              </p>
+            </div>
+
+            <div class="accordion" id="myAccordion">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button
+                    type="button"
+                    class="accordion-button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                  >
+                    Q: What sets your product launch services apart from others?
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse show"
+                  data-bs-parent="#myAccordion"
+                >
+                  <div class="card-body">
+                    <p>
+                      We stand out with strategic marketing, meticulous
+                      planning, and a focus on creating a unique value
+                      proposition. Our tailored launch strategies guarantee
+                      optimal visibility and success for your product.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button
+                    type="button"
+                    class="accordion-button collapsed"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                  >
+                    Q: How does your product development process work?
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#myAccordion"
+                >
+                  <div class="card-body">
+                    <p>
+                      We stand out with strategic marketing, meticulous
+                      planning, and a focus on creating a unique value
+                      proposition. Our tailored launch strategies guarantee
+                      optimal visibility and success for your product.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                  <button
+                    type="button"
+                    class="accordion-button collapsed"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour"
+                  >
+                    Q: Can you accommodate custom requirements in your
+                    development process?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFour"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#myAccordion"
+                >
+                  <div class="card-body">
+                    <p>
+                      We stand out with strategic marketing, meticulous
+                      planning, and a focus on creating a unique value
+                      proposition. Our tailored launch strategies guarantee
+                      optimal visibility and success for your product.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFive">
+                  <button
+                    type="button"
+                    class="accordion-button collapsed"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFive"
+                  >
+                    Q: What support do you provide post-launch?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFive"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#myAccordion"
+                >
+                  <div class="card-body">
+                    <p>
+                      Our customer support process is dedicated to providing
+                      timely and effective assistance to our clients. We
+                      prioritize customer satisfaction and ensure that any
+                      issues or inquiries are addressed promptly and
+                      professionally.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingSix">
+                  <button
+                    type="button"
+                    class="accordion-button collapsed"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseSix"
+                  >
+                    Q: How long does the typical product development and launch
+                    process take?
+                  </button>
+                </h2>
+                <div
+                  id="collapseSix"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#myAccordion"
+                >
+                  <div class="card-body">
+                    <p>
+                      Customer feedback is integral to our improvement process.
+                      We carefully analyze feedback, prioritize areas for
+                      enhancement, and implement changes to better meet customer
+                      needs and expectations.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- ------------------- Wishlist Section -------------------- -->
       <section class="wishlist" style="display: none">
@@ -752,6 +913,7 @@
 
     <!-- Swiper JS -->
     <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="assets/js/main.js"></script>
   </body>
